[package]
edition = "2021"
name = "napi-rs-woff-build"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2", default-features = false, features = ["napi3"] }
napi-derive = { version = "2" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
brotli-ffi = { path = "./brotli/c", features = ["simd", "vector_scratch_space" ]}

[target.'cfg(not(target_os = "linux"))'.dependencies]
mimalloc-rust = "0.2"

[target.'cfg(all(target_os = "linux", not(all(target_env = "musl", target_arch = "aarch64"))))'.dependencies]
mimalloc-rust = { version = "0.2", features = ["local-dynamic-tls"] }

[build-dependencies]
napi-build = "2"
cc = "1"

[profile.release]
lto = true
codegen-units = 1
