[package]
edition = "2021"
name = "napi-rs-woff-build"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-alpha.7", default-features = false, features = ["napi3"] }
napi-derive = { version = "3.0.0-alpha.5" }

[target.'cfg(not(target_os = "macos"))'.dependencies]
brotli-ffi = { path = "./brotli/c", features = ["vector_scratch_space" ]}

[target.'cfg(not(any(target_os = "linux", target_family = "wasm")))'.dependencies]
mimalloc = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
mimalloc = { version = "0.1", features = ["local_dynamic_tls"] }

[build-dependencies]
napi-build = "2"
cc = "1"

[profile.release]
lto = true
codegen-units = 1
strip = "symbols"

[profile.wasi]
inherits = "release"
lto = 'off'
